--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "jest-coverage-badges": "^1.1.2"
   },
   "devDependencies": {
+    "codecov": "^3.5.0",
     "coveralls": "^3.0.6"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
